# YorkieCYOA

./: .gitignore  .replit  README.md  app.py  character_data.csv  character_data.json  character_data.py  character_data.xml  debug_character_names.py  export_characters.py  export_scenes.py  fix_image_types.py  fix_missing_names.py  main.py  migrate_db.py  models.py  pyproject.toml  replit.nix  requirements.txt  scene_data.csv  scene_data.json  scene_data.py  scene_data.xml  update_existing_records.py
api/: image_routes.py  story_branch_routes.py  unity_routes.py
attached_assets/: Pasted-Below-is-a-rewritten-version-of-the-design-discussion-as-a-standard-README-file--1741194599306.txt  Pasted-You-re-developing-a-Choose-Your-Own-Adventure-visual-novel-integrated-with-OpenAI-s-Chat-Completio-1741363556118.txt  Pasted-Your-goal-is-to-ensure-that-when-your-storytelling-API-generates-narrative-choices-it-uses-the-spec-1741380554196.txt
migrations/: add_character_name.py
services/: hybrid_llm_service.py  hybrid_story_maker.py  instagram_service.py  local_llm_service.py  local_story_maker.py  openai_service.py  story_branching.py  story_maker.py
static/css/: custom.css
static/js/: background-manager.js  debug.js  main.js  story_builder.js  storyboard.js
templates/: debug.html  hashtags.html  index.html  layout.html  story_builder.html  storyboard.html
